# rag-mlops-platform

./: .env.example  .gitattributes  .gitignore  .wslconfig.example  README.md  Taskfile.yml
.github/workflows/: ci.yml  deploy.yml  eval-nightly.yml  eval-pr.yml
app/: pyproject.toml
app/src/app/: __init__.py  config.py  db.py  main.py  rate_limit.py
app/src/app/api/: __init__.py  admin.py  chat.py  health.py  ingest.py  keys.py  webhooks.py
app/src/app/auth/: __init__.py  apikey.py  clerk.py
app/src/app/billing/: __init__.py  lago.py  meter.py  plans.py  spend.py
app/src/app/cache/: __init__.py  semantic_cache.py
app/src/app/clients/: __init__.py  embeddings.py  llm.py
app/src/app/evals/: __init__.py  sampled.py
app/src/app/observability/: __init__.py  logging.py  otel.py  tracer.py
app/src/app/qdrant/: __init__.py  client.py  filter_builder.py
app/src/app/rag/: __init__.py  pipeline.yaml  prompt_loader.py  retriever.py
app/src/app/rag/prompts/: rag_system.md
app/src/app/scripts/: __init__.py  register_prompt.py  seed.py  seed_corpus.py
app/tests/: __init__.py  test_billing.py  test_filter_builder.py  test_health.py  test_retriever_rls.py  test_routes.py  test_sampled.py
docker/: Dockerfile.app  Dockerfile.pipelines  Dockerfile.ui  compose.ai.yml  compose.core.yml  compose.gateway.yml  compose.mlops.yml  compose.observability.yml  compose.orchestration.yml  compose.ui.yml  compose.yml
docker/clickhouse/: config.xml
docker/litellm/: 03_spend_view.sql  config.eks.yaml  config.yaml
docker/otel/: collector-config.yaml
docker/postgres/init/: 01_litenants.sql  02_litellm_db.sql  03_api_keys.sql  04_billing.sql
docs/: architecture.md  demo-script.md
docs/decisions/: 0001-gateway-litellm.md  0002-orchestrator-airflow.md  0003-retrieval-langchain.md  0004-feast-deferred.md  0005-vector-db-qdrant.md  0006-auth-clerk-or-keycloak.md  0007-orchestration-airflow3.md  0008-bifrost-bedrock-vllm.md  0009-s3-mountpoint.md  0010-billing-lago-stripe.md  0011-streaming-usage-reconciliation.md  README.md
docs/runbooks/: eks.md  local.md  saas.md
evals/: README.md  golden_dataset.jsonl  pyproject.toml  thresholds.yaml
evals/deepeval/: test_rag_gate.py
evals/judges/: config.yaml
evals/ragas/: runner.py
helm/mlops-platform/: Chart.yaml  README.md  values-eks.yaml  values-generic.yaml  values-kind.yaml  values.yaml
helm/mlops-platform/templates/: _helpers.tpl  namespace.yaml  ollama-statefulset.yaml  s3-storageclass.yaml  tei-deployment.yaml  vllm-deployment.yaml
infra/k8s-bootstrap/: README.md  argocd-apps.yaml
infra/terraform/: README.md
infra/terraform/envs/dev/: main.tf  outputs.tf  providers.tf  variables.tf
infra/terraform/envs/prod/: main.tf  outputs.tf  providers.tf  variables.tf
infra/terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/eks/: addons.tf  karpenter.tf  main.tf  outputs.tf  variables.tf
infra/terraform/modules/grafana-dashboards/: main.tf
infra/terraform/modules/grafana-dashboards/dashboards/: rag-overview.json
infra/terraform/modules/irsa/: main.tf  variables.tf
infra/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/s3-bucket/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
pipelines/: pyproject.toml
pipelines/dags/: assets.py  chunk_embed_index.py  evals.py  ingest.py  prod_eval_alerts.py  reindex_on_change.py  usage_reconciliation.py
ui/: .env.example  .gitignore  README.md  middleware.ts  next.config.ts  package.json  postcss.config.mjs
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/admin/: page.tsx
ui/app/api/admin/[...path]/: route.ts
ui/app/api/chat/: route.ts
ui/app/api/keys/: route.ts
ui/app/keys/: page.tsx
ui/app/sign-in/[[...sign-in]]/: page.tsx
ui/app/sign-up/[[...sign-up]]/: page.tsx
ui/components/: chat-input.tsx  chat-message.tsx  citations.tsx  empty-state.tsx  source-pane.tsx
ui/lib/: types.ts
