[project]
name = "rag-app"
version = "0.1.0"
description = "FastAPI RAG knowledge-base / support-assistant service"
requires-python = ">=3.12"
dependencies = [
    # web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # retrieval / vector db
    "qdrant-client>=1.12",
    "langchain-core>=0.3.4",
    "langchain-qdrant>=0.2.0",   # NOT langchain-community (deprecated)
    "langchain-text-splitters>=0.3.0",
    # http / serving clients
    "httpx>=0.27",
    "tenacity>=9.0",
    # cache + metadata
    "redis>=5.2",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    # observability (M2: Langfuse + OpenTelemetry; optional — guarded imports)
    "structlog>=24.4",
    "langfuse>=3",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    # MLflow Prompt Registry (M3): load system prompt by alias. Heavy dep; the import
    # is guarded in prompt_loader.py so local dev without MLflow still works.
    "mlflow[genai]>=3.14",
    # Auth + rate limiting (M6): Clerk/Keycloak JWT verify + per-key/per-tenant limits.
    "pyjwt>=2.9",
    "cryptography>=43.0",
    "slowapi>=0.1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx",  # for test client
]
# M7 SaaS billing — only needed in prod for Clerk/Stripe webhook signature verification.
# Imported lazily (guarded) so the app boots without them; the webhooks return 503 until
# installed. `uv sync --extra billing` in the prod image.
billing = [
    "svix>=1.24",
    "stripe>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI's idiomatic `param: T = Depends(...)` default-argument pattern is a
# deliberate false positive — the modern `Annotated[T, Depends(...)]` form is equivalent.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# seed_corpus.py is data — long string literals are intentional.
"src/app/scripts/seed_corpus.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]