[project]
name = "rag-evals"
version = "0.1.0"
description = "RAG evals (RAGAS + DeepEval) — the gate that makes this eval-driven, not vibe-driven."
requires-python = ">=3.12"
dependencies = [
    "deepeval>=2.5",          # pytest-style eval gate, --fail-on-threshold-breach
    "ragas>=0.2",             # offline RAG metrics (faithfulness, context precision/recall, etc.)
    "langchain-openai>=0.2",  # ChatOpenAI judge pointed at LiteLLM/Ollama base_url
    "langfuse>=3",           # push eval scores onto traces
    "httpx>=0.27",            # call the app /chat
    "pyyaml>=6",
    "tenacity>=9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["deepeval"]